Main x overflow hidden to fix layout in G Chrome

--- a/sass/universal.scss
+++ b/sass/universal.scss
@@ -466,6 +466,7 @@ header {
 
 main {
   grid-area: m;
+  overflow-x: hidden;
 }
 
 .section-heading {
